--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Jersey+15&family=Space+Grotesk:wght@300..700&display=swap");
+
 :root {
+  --bg-color: #0c1317;
   --main-color: #222e35;
   --side-panel: #0c1317;
   --navbar-color: #202c33;
   --searchbar-color: #202c33;
   --button-bg-color: #00a884;
   --notification-color: #63cb77;
-  --font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono,
-    DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, Courier, monospace;
+  --main-font-family: "Space Grotesk", sans-serif;
+  --white-color: rgb(255, 255, 255);
 }
 
 * {
@@ -17,4 +20,10 @@
 
 html {
   font-size: 62.5%;
+}
+
+body {
+  font-family: var(--main-font-family);
+  color: var(--white-color);
+  background-color: var(--bg-color);
 }
