--- a/css/style.css
+++ b/css/style.css
@@ -26,14 +26,39 @@ body {
   font-family: var(--main-font-family);
   color: var(--white-color);
   background-color: var(--bg-color);
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
 }
 
 /* ===== HEADER ====== */
 
 header {
   background-color: var(--navbar-color);
+  padding: 0 1.2rem;
+}
+
+nav {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .icon {
-  padding: 2rem;
+  margin-top: 1rem;
+  padding: 0.8rem;
+  text-align: center;
+}
+
+.sep-bar-navbar {
+  margin: 1.6rem 0.8rem 0.8rem 0.8rem;
+}
+
+.user-avatar {
+  border-radius: 50%;
+  object-fit: cover;
+  width: 32px;
+  height: 32px;
 }
