--- a/css/style.css
+++ b/css/style.css
@@ -136,19 +136,31 @@ nav {
 }
 
 .chat-panel-main-card {
+  margin: 0 2.5rem;
+}
+
+.card-wrapper {
   display: flex;
-  padding: 0.8rem 2.5rem;
-  width: 100%;
+}
+
+.card-wrapper:hover {
+  background-color: var(--searchbar-color);
+  cursor: pointer;
 }
 
 .chat-avatar {
   width: 13%;
   margin-right: 0.8rem;
+  padding: 0.8rem;
 }
 
 .chat-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid #222d34;
   width: 100%;
+  padding: 0.8rem;
 }
 
 .chat-avatar img {
@@ -188,4 +200,11 @@ nav {
   align-items: center;
   font-size: 1.2rem;
   color: #8696a0;
+  text-align: center;
+}
+
+.message-info-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
