--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Jersey+15&family=Space+Grotesk:wght@300..700&display=swap");
+@import url("https://fonts.cdnfonts.com/css/segoe-ui-4");
 
 :root {
   --bg-color: #0c1317;
@@ -8,7 +9,7 @@
   --searchbar-color: #202c33;
   --button-bg-color: #00a884;
   --notification-color: #63cb77;
-  --main-font-family: "Space Grotesk", sans-serif;
+  --main-font-family: "Segoe UI", "Space Grotesk", sans-serif;
   --white-color: rgb(255, 255, 255);
 }
 
@@ -175,19 +176,19 @@ nav {
 }
 
 .chat-username {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 100;
 }
 
 .chat-shorttext {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 100;
   display: flex;
   align-items: center;
 }
 
 .message-status-indicator {
-  width: 4%;
+  width: 8%;
   margin: 0.3rem;
 }
 
@@ -207,4 +208,12 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.chat-arrow {
+  display: none;
+}
+
+.card-wrapper:hover > .chat-info > .message-info-wrapper > .chat-arrow {
+  display: block;
 }
