--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   min-width: 1060px;
   background-color: var(--main-color);
   height: 95vh;
@@ -295,4 +295,32 @@ nav {
   gap: 0.5rem;
   font-size: 1.4rem;
   color: var(--text-secondary-light-color);
+}
+
+.chat-box-header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: var(--navbar-color);
+  padding: 1rem 1.6rem;
+}
+
+.chat-box-user-avatar {
+  width: 7%;
+  padding-right: 1.9rem;
+}
+
+.chat-box-user-avatar img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+.chat-box-user-info .username {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.chat-box-user-info .last-connection {
+  font-size: 1.4rem;
+  color: var(--text-secondary-color);
 }
