--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ nav {
   height: 95vh;
 }
 
-.chat-box-main {
+.chat-box-main-no-bg {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -372,7 +372,7 @@ nav {
   outline: none;
 }
 
-.chat-box-main {
+.chat-box-main-bg {
   width: 100%;
   height: 100%;
   background-image: url(../img/chat-bg.jpg);
