--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Jersey+15&family=Space+Grotesk:wght@300..700&display=swap");
 @import url("https://fonts.cdnfonts.com/css/segoe-ui-4");
+@import url(https://db.onlinewebfonts.com/c/1c45e28f8e86cc89876f003b953cc3e9?family=SF+Pro+Text+Regular);
 
 :root {
   --bg-color: #0c1317;
@@ -36,21 +37,22 @@ body {
   font-family: var(--main-font-family);
   color: var(--white-color);
   background-color: var(--bg-color);
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 60px auto;
   height: 95vh;
   width: 95vw;
   margin: auto;
+  margin-top: 1.8rem;
 }
 
 header {
   background-color: var(--navbar-color);
-  padding: 0 1.2rem;
 }
 
 nav {
   height: 100%;
-  max-width: 35px;
+  width: 60px;
+  padding: 0 1.2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,6 +63,14 @@ nav {
 .icon {
   margin-top: 1rem;
   padding: 0.8rem;
+  text-align: center;
+  color: #a8b4bb;
+  cursor: pointer;
+}
+
+.active-icon {
+  background-color: #374248;
+  border-radius: 50%;
   text-align: center;
 }
 
@@ -76,9 +86,11 @@ nav {
 }
 
 .chat-sidebar {
-  min-width: 428px;
+  max-width: 45%;
   background-color: var(--side-panel);
   height: 95vh;
+  font-family: "SF Pro Text Regular", sans-serif;
+  font-stretch: 100%;
 }
 
 .chat-sidebar-header,
@@ -92,12 +104,15 @@ nav {
 }
 
 .chat-sidebar-header-title {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   font-weight: 700;
+  padding-top: 0.6rem;
 }
 
 .chat-sidebar-header-options-icons {
   padding: 0.8rem;
+  color: rgb(174, 186, 193);
+  cursor: pointer;
 }
 
 .chat-sidebar-searchbar {
@@ -108,6 +123,7 @@ nav {
 
 .chat-sidebar-searchbar-filter-button {
   margin: 0 0.8rem;
+  color: rgb(134, 150, 160);
 }
 
 .searchbar-wrapper {
@@ -127,12 +143,13 @@ nav {
   width: 100%;
   background-color: inherit;
   border: none;
-  color: var(--white-color);
-  font-size: 1.5rem;
+  color: #8696a0;
+  font-size: 1.3rem;
 }
 
 .search-button {
   padding-top: 0.2rem;
+  color: #8696a0;
 }
 
 .searchbar:focus-visible,
@@ -146,7 +163,7 @@ nav {
 }
 
 .chat-sidebar {
-  width: 413px;
+  width: 40%;
 }
 
 .chat-sidebar-main {
@@ -165,7 +182,7 @@ nav {
 }
 
 .chat-avatar {
-  width: 19%;
+  width: 15%;
   margin: auto 0 0.8rem auto;
   padding: 0.8rem;
 }
@@ -191,15 +208,17 @@ nav {
 }
 
 .chat-username {
-  font-size: 2rem;
-  font-weight: 100;
+  font-size: 1.7rem;
+  font-weight: 400;
+  color: rgb(209, 215, 219);
 }
 
 .chat-shorttext {
-  font-size: 1.5rem;
-  font-weight: 100;
+  font-size: 1.3rem;
+  font-weight: 400;
   display: flex;
   align-items: center;
+  color: rgb(134, 150, 160);
 }
 
 .message-status-indicator {
@@ -242,7 +261,7 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  min-width: 1060px;
+  width: 100%;
   background-color: var(--main-color);
   height: 95vh;
 }
@@ -252,7 +271,7 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  min-width: 1060px;
+  width: 100%;
   background-color: var(--main-color);
   height: 95vh;
 }
@@ -324,6 +343,7 @@ nav {
 
 .chat-box-header {
   width: 100%;
+  height: 59px;
   display: flex;
   align-items: center;
   background-color: var(--navbar-color);
@@ -331,7 +351,7 @@ nav {
 }
 
 .chat-box-user-avatar {
-  width: 7%;
+  width: 4.5%;
   padding-right: 1.9rem;
 }
 
