--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ nav {
   cursor: pointer;
 }
 
-.sidebar-search {
+.sidebar__search {
   padding-left: 1.2rem;
   display: flex;
   align-items: center;
@@ -157,6 +157,7 @@ nav {
 .sidebar__searchbar__filterbtn {
   margin: 0 0.8rem;
   color: rgb(134, 150, 160);
+  cursor: pointer;
 }
 
 .sidebar__form__input {
